syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

message Metadata {
	string security_name = 1;
	int32 security_type = 2;
	int32 update_count = 3;
	int32 date_created = 4;
	string time_update = 5;
	int32 db_id_updated = 6;
	int32 last_txn_id = 7;
	int32 version_info = 8;
}
