syntax = "proto3";
package sec_srv_svc;

import "srv_message_type.proto";
import "srv_sdb_disk.proto";

message SrvMsgGetDiskInfo {
	MessageType message_type = 1;
	string security_name = 2;
}

message SrvMsgGetDiskInfoResponse {
	uint32 message_size = 1;
	message MsgOnSuccess {
		int32 result_code = 1;
		SDBDisk sdb_disk = 2;
	}
	message MsgOnFailure {
		int32 result_code = 1;
	}
	oneof MessageResponse {
		MsgOnFailure msg_on_failure = 2;
		MsgOnSuccess msg_on_success = 3;
	}
}
